--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             <!-- <div class="footer-blok"> -->
             <div class="footer-blok">
                 <div class="address-blok">
-                    <a class="logo-futer" href="./index.html"><span class="logo--span">Web</span>Studio</a>
+                    <a class="logo futer-logo" href="./index.html"><span class="logo--span">Web</span>Studio</a>
                     <address class="address">
                         <ul class="address-list list">
 
@@ -395,7 +395,7 @@
                 </div>
                 <div class="invitation-blok">
                     <p class="invitation">Присоединяйтесь</p>
-                    <ul class="social">
+                    <ul class="social network">
                         <li class="social-list">
                             <a class="social-link network-link" href="">
                                 <svg class="social-svg network-svg" width="20" height="20">
