Выполнен рефакторинг HTML-кода проекта используя методологию BEM относительно паршала   social

--- a/index.html
+++ b/index.html
@@ -165,31 +165,31 @@
 
                             <ul class="social">
 
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
 
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link last" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link last" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -204,30 +204,30 @@
                             <h3 class="team-subtitle">Ольга Репина</h3>
                             <p class="profession" lang="en">Frontend Developer</p>
                             <ul class="social">
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link last" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link last" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -242,30 +242,30 @@
                             <h3 class="team-subtitle">Николай Тарасов</h3>
                             <p class="profession" lang="en">Marketing</p>
                             <ul class="social">
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link last" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link last" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -280,30 +280,30 @@
                             <h3 class="team-subtitle">Михаил Ермаков</h3>
                             <p class="profession" lang="en">UI Designer</p>
                             <ul class="social">
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="social-list">
-                                    <a class="social-link last" href="">
-                                        <svg class="social-svg" width="20" height="20">
+                                <li class="social__list">
+                                    <a class="social__link last" href="">
+                                        <svg class="social__svg" width="20" height="20">
                                             <use href="./images/sprite.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -396,30 +396,30 @@
                 <div class="invitation-blok">
                     <p class="invitation">Присоединяйтесь</p>
                     <ul class="social network">
-                        <li class="social-list">
-                            <a class="social-link network-link" href="">
-                                <svg class="social-svg network-svg" width="20" height="20">
+                        <li class="social__list">
+                            <a class="social__link network__link" href="">
+                                <svg class="social__svg network__svg" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list">
-                            <a class="social-link network-link " href="">
-                                <svg class="social-svg network-svg" width="20" height="20">
+                        <li class="social__list">
+                            <a class="social__link network__link " href="">
+                                <svg class="social__svg network__svg" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list ">
-                            <a class="social-link network-link" href="">
-                                <svg class="social-svg network-svg" width="20" height="20">
+                        <li class="social__list ">
+                            <a class="social__link network__link" href="">
+                                <svg class="social__svg network__svg" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="social-list">
-                            <a class="social-link network-link" href="">
-                                <svg class="social-svg network-svg" width="20" height="20">
+                        <li class="social__list">
+                            <a class="social__link network__link" href="">
+                                <svg class="social__svg network__svg" width="20" height="20">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
