--- a/portfolio.html
+++ b/portfolio.html
@@ -237,35 +237,35 @@
             <div class="invitation-blok">
                 <p class="invitation">Присоединяйтесь</p>
                 <ul class="social network">
-                    <li class="social-list">
-                        <a class="social-link network-link" href="">
-                            <svg class="social-svg network-svg" width="20" height="20">
+                    <li class="social__list">
+                        <a class="social__link network__link" href="">
+                            <svg class="social__svg network__svg" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list">
-                        <a class="social-link network-link " href="">
-                            <svg class="social-svg network-svg" width="20" height="20">
+                    <li class="social__list">
+                        <a class="social__link network__link " href="">
+                            <svg class="social__svg network__svg" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list ">
-                        <a class="social-link network-link" href="">
-                            <svg class="social-svg network-svg" width="20" height="20">
+                    <li class="social__list ">
+                        <a class="social__link network__link" href="">
+                            <svg class="social__svg network__svg" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list">
-                        <a class="social-link network-link" href="">
-                            <svg class="social-svg network-svg" width="20" height="20">
+                    <li class="social__list">
+                        <a class="social__link network__link" href="">
+                            <svg class="social__svg network__svg" width="20" height="20">
                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
-            
+                
                 </ul>
             </div>
                 <form class="subscription-form" autocomplete="off">
