--- a/index.html
+++ b/index.html
@@ -62,53 +62,53 @@
             <div class="container">
                 <h2 class="visually-hidden">Преимущества</h2>
                 <ul class="feature-list list">
-                    <li class="feature-list-item">
-                        <div class="feature">
-                            <svg class="feature-svg" width="70" height="70">
+                    <li class="feature-list__item">
+                        <div class="feature-list__feature">
+                            <svg class="feature-list__svg" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="feature-title">Внимание к деталям</h3>
-                        <p class="feature-description">
+                        <h3 class="feature-list__title">Внимание к деталям</h3>
+                        <p class="feature-list__description">
                             Идейные соображения, а также
                             начало повседневной работы по
                             формированию позиции.
                         </p>
                     </li>
-                    <li class="feature-list-item">
-                        <div class="feature">
-                            <svg class="feature-svg" width="70" height="70">
+                    <li class="feature-list__item">
+                        <div class="feature-list__feature">
+                            <svg class="feature-list__svg" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-clock"></use>
                             </svg>
                         </div>
-                        <h3 class="feature-title">Пунктуальность</h3>
-                        <p class="feature-description">
+                        <h3 class="feature-list__title">Пунктуальность</h3>
+                        <p class="feature-list__description">
                             Задача организации, в особенности
                             же рамки и место обучения кадров
                             влечет за собой.
                         </p>
                     </li>
-                    <li class="feature-list-item">
-                        <div class="feature">
-                            <svg class="feature-svg" width="70" height="70">
+                    <li class="feature-list__item">
+                        <div class="feature-list__feature">
+                            <svg class="feature-list__svg" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="feature-title">Планирование</h3>
-                        <p class="feature-description">
+                        <h3 class="feature-list__title">Планирование</h3>
+                        <p class="feature-list__description">
                             Равным образом консультация с
                             широким активом в значительной
                             cтепени обуславливает.
                         </p>
                     </li>
-                    <li class="feature-list-item">
-                        <div class="feature">
-                            <svg class="feature-svg" width="70" height="70">
+                    <li class="feature-list__item">
+                        <div class="feature-list__feature">
+                            <svg class="feature-list__svg" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="feature-title">Современные технологии</h3>
-                        <p class="feature-description">
+                        <h3 class="feature-list__title">Современные технологии</h3>
+                        <p class="feature-list__description">
                             Значимость этих проблем настолько
                             очевидна, что реализация плановых
                             заданий.
