--- a/index.html
+++ b/index.html
@@ -368,23 +368,23 @@
     <footer class="footer">
         <div class="container">
             <!-- <div class="footer-blok"> -->
-            <div class="footer-blok">
-                <div class="address-blok">
+            <div class="footer__blok">
+                <div class="footer__address-blok">
                     <a class="logo futer-logo" href="./index.html"><span class="logo--span">Web</span>Studio</a>
                     <address class="address">
-                        <ul class="address-list list">
+                        <ul class="footer__address-list list">
 
-                            <li class="address-list-item">
-                                <a class="address-list-link link" href="https://goo.gl/maps/vD9bHyXzmeHu5Eb17"
+                            <li class="footer__list-item">
+                                <a class="footer__list-link link" href="https://goo.gl/maps/vD9bHyXzmeHu5Eb17"
                                     target="_blank" rel="noopener noreferrer" class="link">
                                     г. Киев, пр-т Леси Украинки, 26</a>
                             </li>
-                            <li class="address-list-item">
-                                <a class="contacts-list-link link" href="mailto:info@devstudio.com"
+                            <li class="footer__list-item">
+                                <a class="footer__list-link link" href="mailto:info@devstudio.com"
                                     class="link contacts">info@devstudio.com</a><br />
                             </li>
-                            <li class="address-list-item">
-                                <a class="contacts-list-link link" href="tel:+380961111111" class="link contacts">+38
+                            <li class="footer__list-item">
+                                <a class="footer__list-link link" href="tel:+380961111111" class="link contacts">+38
                                     096 111 11
                                     11</a>
                             </li>
@@ -393,8 +393,8 @@
 
                     </address>
                 </div>
-                <div class="invitation-blok">
-                    <p class="invitation">Присоединяйтесь</p>
+                <div class="footer__invitation-blok">
+                    <p class="footer__invitation">Присоединяйтесь</p>
                     <ul class="social network">
                         <li class="social__list">
                             <a class="social__link network__link" href="">
@@ -430,12 +430,12 @@
                 <!-- -Subscription-form- -->
                 <form class="subscription-form" autocomplete="off">
                     <div class="subscription-blok">
-                        <label for="e-mail" class="footer-label">ПОДПИШИТЕСЬ НА РАССЫЛКУ</label>
-                        <div class="newsletter-blok">
-                            <input class="footer-input" type="email" name="email" id="e-mail" placeholder="E-mail" />
-                            <button class="footer-button" type="submit">
+                        <label for="e-mail" class="subscription-blok__label">ПОДПИШИТЕСЬ НА РАССЫЛКУ</label>
+                        <div class="subscription-blok__cell">
+                            <input class="subscription-blok__input" type="email" name="email" id="e-mail" placeholder="E-mail" />
+                            <button class="subscription-blok__button" type="submit">
                                 Подписаться
-                                <div class="icon-send">
+                                <div class="subscription-blok__icon">
                                     <svg width="24" height="24">
                                         <use href="./images/sprite.svg#icon-icon-send"></use>
                                     </svg>
