--- a/portfolio.html
+++ b/portfolio.html
@@ -213,17 +213,17 @@
                     <address class="address">
                         <ul class="footer__address-list list">
     
-                            <li class="footer__list-item">
-                                <a class="footer__list-link link" href="https://goo.gl/maps/vD9bHyXzmeHu5Eb17"
+                            <li class="footer__adrress-list-item">
+                                <a class="footer__address-list-link link" href="https://goo.gl/maps/vD9bHyXzmeHu5Eb17"
                                     target="_blank" rel="noopener noreferrer" class="link">
                                     г. Киев, пр-т Леси Украинки, 26</a>
                             </li>
                             <li class="footer__list-item">
-                                <a class="footer__list-link link" href="mailto:info@devstudio.com"
+                                <a class="footer__contacts-list-link link" href="mailto:info@devstudio.com"
                                     class="link contacts">info@devstudio.com</a><br />
                             </li>
                             <li class="footer__list-item">
-                                <a class="footer__list-link link" href="tel:+380961111111" class="link contacts">+38
+                                <a class="footer__contacts-list-link link" href="tel:+380961111111" class="link contacts">+38
                                     096 111 11
                                     11</a>
                             </li>
